...
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivlike"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/like"/>
                <ImageView
                    android:id="@+id/ivyes"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/yes"/>
                <ImageView
                    android:id="@+id/ivadd"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/more"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/expressiveTwo"
...
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivdislike"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/dontlike"/>
                <ImageView
                    android:id="@+id/ivno"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/no"/>
                <ImageView
                    android:id="@+id/ivminus"
                    android:layout_width="82dp"
                    android:layout_height="76dp"
                    android:src="@drawable/less"/>
            </LinearLayout>
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"
            android:scrollbarFadeDuration="0"
            android:layout_marginBottom="64dp"/>
...
        android:id="@+id/relativeLayoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-16dp">
        <ImageView
            android:id="@+id/ivhome"
            android:layout_width="80dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/home"/>
        <ImageView
            android:id="@+id/keyboard"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/keyboard"
            android:alpha=".5"
            android:layout_toRightOf="@+id/ivhome"/>
        <ImageView
...
