...
        android:id="@+id/txTitleHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/transparent"
        android:text="@string/access_dialog_title"/>
    <Button
        android:id="@+id/btnClose"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/close"/>
    <Button
        android:id="@+id/enterCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:fontFamily="@fonts/EkMukta-SemiBold"
        android:layout_centerHorizontal="true"
...
