...
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/custom_keyboard_layout_margin_top">
            <EditText
                android:id="@+id/et_keyboard_utterances"
                android:layout_width="@dimen/custom_keyboard_et_width"
                android:layout_height="@dimen/custom_keyboard_et_height"
                android:layout_marginHorizontal="@dimen/custom_keyboard_et_horizontal_margin"
                android:textSize="@dimen/custom_keyboard_et_text_size"
                android:padding="8dp"
                android:fadeScrollbars="false"
...
